reverse-proxy/letter/endpoint.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: letter-service # needs to match Service name
subsets:
  - addresses:
      - ip: 192.168.0.197
    ports:
      - name: http
        port: 4040
        protocol: TCP
