reverse-proxy/letter/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: letter-service # needs to match endpoint name
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 4040
